--- a/a.html
+++ b/a.html
@@ -18,3 +18,11 @@ frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 allowfullscreen>
 </iframe>
+
+
+                a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
+                script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
+
+
+                div(data-mc-src="4d74060c-e3e2-4509-8294-3ef54f6c7e52#null")
+                script(src="https://cdn2.woxo.tech/a.js#64a584aeb8d648238ad0b0f7", async, data-usrc)
